--- a/.github/workflows/update_csv.yml
+++ b/.github/workflows/update_csv.yml
@@ -34,8 +34,8 @@ jobs:
       - name: Overwrite CSV
         if: steps.check-csv.outcome == 'success'
         run: |
-          mv data/new-data.csv data/data.csv
-        # Replace 'data/data.csv' with the correct path and filename of your CSV file.
+          mv data/new-data.csv data/childcare_locations.csv
+        # Replace 'data/childcare_locations.csv' with the correct path and filename of your CSV file.
 
       - name: Commit and Push Changes
         if: steps.check-csv.outcome == 'success'
