--- a/.github/workflows/update_csv.yml
+++ b/.github/workflows/update_csv.yml
@@ -1,8 +1,8 @@
 name: Daily CSV Update
 
-on:
-  schedule:
-    - cron: '0 0 * * *' # Runs every day at midnight (UTC)
+#on:
+  #schedule:
+   # - cron: '0 0 * * *' # Runs every day at midnight (UTC)
 
 jobs:
   update-csv:
