Update update_csv.yml - adding correct url

--- a/.github/workflows/update_csv.yml
+++ b/.github/workflows/update_csv.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: Download New CSV
         run: |
-          if curl -o data/new-data.csv https://catalogue.data.gov.bc.ca/dataset/4cc207cc-ff03-44f8-8c5f-415af5224646/resource/9a[…]-4a11-936a-6e77b15eeb39/download/childcare_locations.csv; then
+          if curl -o data/new-data.csv https://catalogue.data.gov.bc.ca/dataset/4cc207cc-ff03-44f8-8c5f-415af5224646/resource/9a9f14e1-03ea-4a11-936a-6e77b15eeb39/download/childcare_locations.csv; then
             echo "CSV download successful."
           else
             echo "CSV download failed."
