--- a/.github/workflows/update_csv.yml
+++ b/.github/workflows/update_csv.yml
@@ -36,18 +36,19 @@ jobs:
         run: |
           if ! diff -q data/new-data.csv data/childcare_locations.csv; then
             echo "CSV files are different."
+            echo "DIFFERENT_CSV=true" >> $GITHUB_ENV
           else
             echo "CSV files are the same. Skipping commit."
-            exit 78
+            echo "DIFFERENT_CSV=false" >> $GITHUB_ENV
           fi
 
       - name: Overwrite CSV
-        if: steps.check-csv.outcome == 'success' && steps.check-differences.outcome == 'success'
+        if: steps.check-csv.outcome == 'success' && env.DIFFERENT_CSV == 'true'
         run: |
           mv data/new-data.csv data/childcare_locations.csv
 
       - name: Commit and Push Changes
-        if: steps.check-csv.outcome == 'success' && steps.check-differences.outcome == 'success'
+        if: steps.check-csv.outcome == 'success' && env.DIFFERENT_CSV == 'true'
         run: |
           git config --global user.name "GitHub Actions"
           git config --global user.email "actions@github.com"
