--- a/.github/workflows/update_csv.yml
+++ b/.github/workflows/update_csv.yml
@@ -2,7 +2,7 @@ name: Daily CSV Update
 
 on:
   schedule:
-    - cron: '*/1 * * * *' # Runs every day at midnight (UTC)
+    - cron: '0 8 * * *' # Runs every day at midnight (UTC)
 
 jobs:
   update-csv:
